fixed mobile scrollbar

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -22,6 +22,10 @@
 }
 
 @media only screen and (max-width: 600px) {
+  *{
+    padding: 0px;
+    margin: 0px;
+  }
   ::-webkit-scrollbar {
     height: 0px;
     background: white;
